# rust-cctl

./: Cargo.toml  README.md  run.sh
src/: applet_updater.rs  config.rs  device.rs  device_monitor.rs  main.rs  pubsub.rs  pwcli.rs  util.rs
src/device/: a2dp_codec.rs  audio.rs  audio_client.rs  bluetooth_protocol.rs  bus.rs  card.rs  card_device.rs  card_device_type.rs  card_profile.rs  device_state.rs  form_factor.rs  parse_card_devices.rs  parse_cards.rs
src/pubsub/: message.rs  message_register.rs  message_state.rs  message_topic.rs  try_downcast_ref.rs
src/watchdog/: audio.rs
src/web/: server.rs
web/: .env.development  .env.production  .prettierignore  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
web/src/: global.d.ts
web/src/lib/: api.ts
web/src/lib/audio/: index.ts  types.ts
web/src/lib/ui/: Mute.svelte  Volume.svelte
web/src/routes/: __layout.svelte  index.svelte
