[package]
name = "cctl"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers", "ws"] }
chrono = "0.4"
clap = "3.1"
fern = "0.6"
futures = "0.3"
glob = "0.3"
log = "0.4"
metrics = "0.18"
metrics-exporter-prometheus = "0.9"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.12", features = ["rt-multi-thread", "process", "macros"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "smallvec", "fmt", "ansi"] }
tracing-opentelemetry = "0.17"